# BeFitNow

./: CMakeLists.txt  main.cpp
include/models/: Booking.h  Enums.h  Gym.h  Membership.h  Notification.h  Review.h  ScheduleComment.h  Staff.h  SupportTicket.h  Training.h  User.h  UserPreferences.h
include/services/: BeFitNowService.h
include/ui/: AIAssistantApp.h  AdminConsoleApp.h  ConsoleIo.h  LauncherApp.h  SupportConsoleApp.h  TrainerConsoleApp.h  UserConsoleApp.h
src/models/: Enums.cpp
src/services/: BeFitNowService.cpp
src/ui/: AIAssistantApp.cpp  AdminConsoleApp.cpp  ConsoleIo.cpp  LauncherApp.cpp  SupportConsoleApp.cpp  TrainerConsoleApp.cpp  UserConsoleApp.cpp
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  index.css
web/src/bot/: telegramBotFlow.ts
web/src/components/: BottomNav.tsx  PhoneFrame.tsx  StaffCalendar.tsx  Toast.tsx  TrainingCard.tsx
web/src/context/: AuthContext.tsx
web/src/pages/: AuthPage.tsx  BookingsPage.tsx  ChatPage.tsx  ClubsPage.tsx  HomePage.tsx  ProfilePage.tsx  SupportPage.tsx  TelegramBotPage.tsx  TrainersPage.tsx  TrainingDetailPage.tsx  WelcomePage.tsx
web/src/pages/admin/: AdminDashboardPage.tsx  AdminLoginPage.tsx
web/src/pages/portal/: PortalSections.tsx  StaffDashboardPage.tsx  StaffLoginPage.tsx
web/src/pages/trainer/: TrainerLoginPage.tsx  TrainerPortalPage.tsx
web/src/services/: beFitNowService.ts
web/src/types/: index.ts
web/src/utils/: geo.ts
